-
Bug
-
Resolution: Done
-
P2: Important
-
5.4.0
-
None
-
Compiler: *MinGW4.9*
System: *Windows7 64-bit*
-
4663063d021a76e7662813438f72fcfb42ff2252
How to reproduce the bug:
1. Instantiate two QSoundEffects (playing different files to tell them apart)
2. Set volume on first QSoundEffect very low
3. Set volume on second QSoundEffect very high
4. Play first sound
5. Play second sound, while the first is still playing
Occuring result: As soon as the second sound (loud) starts playing, the first (quiet) sound gets louder instantly.
Expected result: Regarding the Documentation setVolume() is supposed to set the volume corresponding to the QSoundEffect (analogical: QMediaPlayer, QAudioOutput).
| For Gerrit Dashboard: QTBUG-43765 | ||||||
|---|---|---|---|---|---|---|
| # | Subject | Branch | Project | Status | CR | V |
| 172750,2 | WindowsAudio: fix volume when using multiple QAudioOutputs | 5.6 | qt/qtmultimedia | Status: MERGED | +2 | 0 |